package hdfs;
/*
protoc -I=proto --java_out=java proto/MyProtocol.proto
*/
option java_package = "hdfs.rpc.protocol.proto";
option java_outer_classname = "MyProtocolProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;

message MkdirRequestProto {
    required string path = 1;
}

message MkdirResponseProto {
    required string result = 1;
}

service MyProtocol{
    rpc mkdir(MkdirRequestProto)
    returns(MkdirResponseProto);
}